# octopus

./: .boring  .clang-format  .dir-locals.el  .gdbinit  .gitignore  Doxyfile  GNUmakefile  LICENSE  Makefile  Makefile.in  README  README.md  README.rus  box.cfg_tmpl  box.h  box.m  configure.ac  depend  example.h  feeder.h  feeder.m  feeder_cfg.cfg_tmpl  jumproot.mk  memcached.cfg_tmpl  memcached.rl  meta_op.m  modules.m4  moonbox.h  moonbox.m  object_space.cfg_tmpl  op.m  palloc.c  palloc.h  print.m  proto.rl  salloc.c  salloc.h  store.h  store.m  tuple_index.m
cfg/: Makefile  admin.cfg_tmpl  constant_kv.cfg_tmpl  core.cfg_tmpl  core_cfg.cfg_tmpl  graphite.cfg_tmpl  iproto.cfg_tmpl  log_io.cfg_tmpl  onlineconf.cfg_tmpl  opengraph_xlogs.cfg_tmpl  paxos.cfg_tmpl  replication.cfg_tmpl  warning.m
client/libiproto/: Makefile  errcode.c  iproto.c  libiproto.h
client/octobench/: Makefile  octobench.c
client/ruby/: iproto.rb  silverbox.rb
client/shard/: shardbox.pl
doc/: README-rus.org  example.cfg  example_cluster.cfg  memcached.cfg  silverbox-protocol.txt
extra/: graphite.lua
extra/graph/: parse.pl  showgraph.sh
extra/wireshark/: iproto.lua
include/: admin.h  assoc.h  config.h.in  constant_kv.h  coro.h  fiber.h  full_mesh.h  graphite.h  index.h  iproto.h  iproto_def.h  log_io.h  mbox.h  mhash.h  net_io.h  objc.h  object.h  octopus.h  octopus_ev.h  onlineconf.h  palloc.h  paxos.h  pickle.h  ptr_hash.h  raft.h  run_crc.h  salloc.h  say.h  shard.h  spawn_child.h  stat.h  system.h  tarantool.h  tarantool_ev.h  tbuf.h  thread_pool.h  util.h
mod/box/: Makefile  box.cfg_tmpl  box.h  box.m  box_cfg.cfg_tmpl  index.h  index.m  index_hash.m  index_tree.m  index_tuple.m  memcached.rl  meta_op.m  moonbox.h  moonbox.m  op.m  print.m  tuple_index.m
mod/box/src-lua/: box.lua  box_prelude.lua  moonbox.h  moonbox.m
mod/box/src-ml/: box1.ml  box_index_stubs.m  box_space.ml  box_tuple.ml  camlbox.m
mod/box/test/: 01.1_test_index_order.out  01_test_index.out  02_test_index_pk_tree.rb  04.1_test_box_update.out  04.1_test_box_update.rb  06_test_wal_error.out  06_test_wal_error.rb  07.2_test_replication_lag.rb  07.3_test_replication_switch.out  08.2_test_run_crc.rb  08_test_run_crc.out  09_test_inprogress_rename.out  11_test_replication_filter.out  13_test_cat_scn.rb  14_test_fold_scn.out  14_test_fold_scn.rb  15_test_nowal.out  16_test_addr_port.out  16_test_addr_port.rb  17_test_gentree_pk.rb  18_test_dummy_index.out  19.1_test_invalid_wal.rb  19_test_invalid_wal.out  19_test_invalid_wal.rb  20_test_hash_iter.out  20_test_hash_iter.rb  21_test_get_all_tuples.out  22_test_lua_replica.rb  (+38 more)
mod/example/: Makefile  example.cfg  main.m
mod/feeder/: .gitignore  Makefile  feeder.h  feeder.m  feeder_cfg.cfg_tmpl
mod/follower/: Makefile  follower.m
mod/graphite/: Makefile  graphite.m
mod/memcached/: Makefile  proto.rl  store.h  store.m
mod/onlineconf/: Makefile  onlineconf.m
scripts/: darcs-describe  fetch-modules.sh  gen-lua-registry.sh  gen-lua-registry.sh.in  indent  make-dist.sh  make_release.sh  run_test.sh  stringify.c  valgrind.supp
scripts/zcov/: GCovGroup.py
src/: Makefile  admin.rl  assoc.m  constant_kv.m  coro.m  errcode.c  fiber.m  full_mesh.m  graphite.m  iproto.m  iproto_client.m  log_io.m  log_io_por.m  log_io_puller.m  log_io_raft.m  log_io_reader.m  log_io_recovery.m  log_io_remote.m  log_io_run_crc.m  log_io_shard.m  log_io_writers.m  net_io.m  objc.m  object.m  octopus.m  octopus_ev.m  octopus_main.m  onlineconf.m  palloc.m  paxos.m  pickle.m  ptr_hash.m  salloc.m  say.m  spawn_child.m  stat.m  tarantool.m  tarantool_ev.m  tbuf.m  thread_pool.m  (+3 more)
src-lua/: Makefile  box.lua  box_prelude.lua  cdef_base.lua  ckv.lua  ddump.lua  feeder.lua  fiber_lock.lua  fiber_loop.lua  gen_cdef.sh  graphite.lua  index.lua  jit  lpeglj  moonbox.h  moonbox.m  net.lua  objc.lua  octopus_lua.h  octopus_lua.m  octopus_lua_cfg.cfg_tmpl  onlineconf.lua  packer.lua  pp.lua  prelude.lua  reloadfile.lua  repl.lua  shard.lua  stat.lua  wal.lua
src-lua/box/: dyn_tuple.lua  example_proc.lua  expire.lua  loop.lua  op.lua  string_ext.lua
src-ml/: Makefile  box.ml  box1.ml  box1.mli  box_expire.ml  box_index.ml  box_index_stubs.m  box_op.ml  box_space.ml  box_tuple.ml  box_tuple_stubs.m  camlbox.h  camlbox.m  exc_stubs.m  fiber.ml  fiber_stubs.m  index_stubs.m  load_plugins.ml  net_io.ml  net_io_stubs.m  ocaml.cfg_tmpl  octopus.ml  octopus.mli  packer.ml  packer_stubs.m  plugin.m  say.ml  say.mli  say_stubs.m
src-rs/: Cargo.toml  Makefile
src-rs/src/: ev.rs  file_ext.rs  lib.rs  log_io.rs  net_io.rs  palloc.rs  pickle.rs  say.rs  tbuf.rs
src-rs/src/log_io/: mod.rs  row.rs  xlog.rs  xlog_dir.rs
src-rs/test_runtime/: Cargo.toml  build.rs
src-rs/testdata/golden/: scan_dir.txt  scan_dir_lsn.txt  scan_dir_scn1.txt  scan_dir_scn2.txt
src/index/: Makefile  base.m  common.m  dummy.m  hash.m  lua.m  nihtree.m  ordering.m  phash.m  sptree.m  tree.m  twltree.m
test/: 00.1_test_basic_compat.out  00.1_test_basic_compat.rb  00_test_basic.out  00_test_basic.rb  01.1_test_index_order.rb  01_test_index.out  01_test_index.rb  02_test_index_pk_tree.out  02_test_index_pk_tree.rb  03_test_index_nonuniq_tree.out  03_test_index_nonuniq_tree.rb  04.1_test_box_update.out  04.1_test_box_update.rb  04_test_box_update.out  04_test_box_update.rb  05_test_memcached.out  05_test_memcached.rb  05_test_scn.out  05_test_scn.rb  06_test_wal_error.rb  07.1_test_replication.out  07.1_test_replication.rb  07.2_test_replication_lag.out  07.2_test_replication_lag.rb  07.3_test_replication_switch.out  07.3_test_replication_switch.rb  07.4_test_replication_hotstanbdy.out  07.4_test_replication_hotstanbdy.rb  07.4_test_replication_singleport.out  07.4_test_replication_singleport.rb  07.5_test_replication_empty_old.out  07.5_test_replication_empty_old.rb  07_test_replication.out  07_test_replication.rb  08.1_test_run_crc.rb  08.2_test_run_crc.out  08_test_run_crc.out  08_test_run_crc.rb  09_test_inprogress_rename.rb  10_test_mod_crc.out  (+92 more)
test/lib/: options.rb  run_env.rb  silverbox-log.rb  standalone_env.rb
(+17 files in other folders)
