[package]
name = "rustyoctopus"
version = "0.1.0"
authors = ["Yury Vostrikov <mon@unformed.ru>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
take_mut = "0.2"
libc = "0.2"
staticvec = "0.10"
cfg-if = "0.1"

[profile.dev]
opt-level = 0
panic = "abort"
debug = 2

[profile.release]
panic = "abort"
debug = 2

[dev-dependencies]
memoffset = "*"