[package]
name = "rustyoctopus"
version = "0.1.0"
authors = ["Yury Vostrikov <mon@unformed.ru>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.72"
staticvec = "0.10.2"
cfg-if = "0.1.10"
log = "0.4.11"
bitflags = "1.2.1"

[profile.dev]
opt-level = 0
panic = "abort"
debug = 2

[profile.release]
panic = "abort"
debug = 2

[dev-dependencies]
memoffset = "*"